feat(core): consolidate application source and pipeline for exe packaging
- Synchronize 2D kinematics and step derivatives in cabrillo tracking engine
- Stabilize seek-flush epoch fencing in dual-stream Xuggle pipeline
- Update VideoAdapter and synchronize osp submodule commit
- Purge deprecated metrology_system subsystem to match local workspace
- Untrack build_cli binary classes from version control
- Add Verify3D testing harness and VS Code launch configurations